--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <body>
         <h1>Blackjack</h1>
         <p id="message-el">Want to play a round?</p>
-        <p id="cards-el">Cards:</p>
+        <p id="cards-el">Cards:
+
+        </p>
+        <div class="cards-container" id="cards-container-div">
+
+        </div>
+
         <p id="sum-el">Sum:</p>
         <button onclick="startGame()">START GAME</button>
         <button onclick="newCard()">NEW CARD</button>
