--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <body>
         <h1>Blackjack</h1>
         <p id="message-el">Want to play a round?</p>
-        <p id="cards-el">Cards:
-
-        </p>
+        <p id="cards-el">Cards: </p>
         <div class="cards-container" id="cards-container-div">
-
+            <img id="first-card-img" class="card-img"/>
+            <img id="second-card-img" class="card-img"/>
         </div>
 
         <p id="sum-el">Sum:</p>
