Moved deck array to another file for better readability and made small styling changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
         </div>
 
         <p id="sum-el">Sum:</p>
-        <button onclick="startGame()">START GAME</button>
-        <button onclick="newCard()">NEW CARD</button>
+        <div class="buttons-container">
+            <button onclick="startGame()">START GAME</button>
+            <button onclick="newCard()">NEW CARD</button>
+        </div>
+
         <p id="player-el"></p>
         <script src="index.js"></script>
+        <script type="text/javascript" src="data.js"></script>
     </body>
 </html>
